--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pinia": "^2.0.23",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.41",
+    "vue-burger-menu": "^2.0.5",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
